--- a/package.json
+++ b/package.json
@@ -25,43 +25,52 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "scully": "scully",
+    "scully:serve": "scully serve"
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.0.4",
     "@angular/animations": "9.0.0",
+    "@angular/cdk": "^9.1.1",
     "@angular/common": "9.0.0",
     "@angular/compiler": "9.0.0",
     "@angular/core": "9.0.0",
     "@angular/forms": "9.0.0",
+    "@angular/material": "^9.1.1",
     "@angular/platform-browser": "9.0.0",
     "@angular/platform-browser-dynamic": "9.0.0",
     "@angular/router": "9.0.0",
+    "@nrwl/angular": "9.0.4",
+    "@scullyio/init": "0.0.23",
+    "@scullyio/ng-lib": "latest",
+    "@scullyio/scully": "latest",
+    "@types/luxon": "^1.21.0",
     "core-js": "^2.5.4",
+    "luxon": "^1.22.0",
     "rxjs": "~6.5.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.900.1",
     "@angular/cli": "9.0.1",
-    "@nrwl/workspace": "9.0.4",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.18.2",
     "@angular/compiler-cli": "9.0.0",
     "@angular/language-service": "9.0.0",
-    "@angular-devkit/build-angular": "0.900.1",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "8.0.0",
+    "@nrwl/cypress": "9.0.4",
     "@nrwl/jest": "9.0.4",
-    "jest": "24.9.0",
+    "@nrwl/workspace": "9.0.4",
     "@types/jest": "24.9.1",
-    "ts-jest": "24.0.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
     "cypress": "^3.8.2",
-    "@nrwl/cypress": "9.0.4"
+    "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "jest": "24.9.0",
+    "jest-preset-angular": "8.0.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.7.4"
   }
 }
